# imgui-platform-kit

./: .gitignore  README.md
imgui-platform-kit/: CMakeLists.txt  build.bat  build.sh  install.sh
imgui-platform-kit/examples/: example.cpp
imgui-platform-kit/include/: colour_palette.h  log_window.h  template_window.h  theme_window.h  themes.h  user_interface.h  user_interface_parameters.h  user_interface_window.h
imgui-platform-kit/include/linux/: glfw_opengl3_user_interface.h
imgui-platform-kit/include/win32/: win32_dx12_user_interface.h
imgui-platform-kit/src/: log_window.cpp  template_window.cpp  theme_window.cpp  themes.cpp  user_interface.cpp  user_interface_parameters.cpp  user_interface_window.cpp
imgui-platform-kit/src/linux/: glfw_opengl3_user_interface.cpp
imgui-platform-kit/src/win32/: win32_dx12_user_interface.cpp
